--- a/20201104作業/回家作業.html
+++ b/20201104作業/回家作業.html
@@ -32,6 +32,7 @@
         }
         .box {
           width: 95%;
+         
         }
       }
       @media (min-width: 992px) {
@@ -107,6 +108,9 @@
           border:1px solid #DDD;
         }
         p{
+          display: none;
+        }
+        hr{
           display: none;
         }
       }
@@ -273,7 +277,9 @@
             </span>
       
         </div>
+
       </div>
+      <hr>
       <div class="row">
         <div class="boxHTML center">
           <img src="./HTML.png"/>
@@ -289,6 +295,7 @@
         <div class="lineHTML"></div>
       </div>
 
+      <hr>
       <div class="row">
         <div class="boxCSS center">
           <img src="./CSS.png"/>
@@ -301,7 +308,7 @@
         </div>
         <div class="lineCSS"></div>
       </div>
-
+      <hr>
       <div class="row">
         <div class="boxJS center">
           <img src="./JS.png" />
@@ -313,6 +320,7 @@
         </div>
         <div class="lineJS"></div>
       </div>
+      <hr>
       <div class="row">
         <div class="boxJQ center">
           <img src="./JQ.png" />
@@ -324,6 +332,7 @@
           <div class="lineJQ"></div>
         </div>
       </div>
+      <hr>
       <div class="row">
         <div class="boxBootstrap center">
           <img src="./Bootstrap.png" />
@@ -337,6 +346,7 @@
           <div class="lineB"></div>
         </div>
       </div>
+      <hr>
       <div class="row">
         <div class="boxSass center">
           <img src="./Sass.png" />
@@ -346,6 +356,9 @@
             ，可以用更快速、更方便的方式撰寫。</p>
           <div class="lineSass"></div>
         </div>
+      </div>
+      <hr>
+        <div class="row">
         <div class="boxVue center">
             <img src="./vue.png" />
             <h1>Vue.js</h1>
@@ -357,6 +370,7 @@
           </div>
 
       </div>
+      <hr>
     </div>
   </body>
 </html>
